--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                     </div>
                     <div id="slide2" class="carousel-item relative w-full">
                       <img
-                        src="Images/1.png"
+                        src="Images/4.png"
                         class="w-full" />
                         <div class="absolute left-5 right-full bottom-5 flex -translate-y-3/4 transform justify-between gap-4">
                             <a href="#slide1" class="btn btn-circle bg-black text-white border-none">❮</a>
@@ -375,7 +375,7 @@
         </div>
       </section>
 
-      <section>
+      <section class="w-[90%] mx-auto">
         <div class="border-y-2 border-dashed py-10">
           <h1 class="text-2xl font-bold text-center">Clients Question</h1>
           <p class="w-2/4 text-sm mx-auto mt-4 text-center text-gray-600 ">
@@ -383,7 +383,7 @@
           </p>
         </div>
 
-        <div class="mt-10 grid grid-cols-1 lg:grid-cols-2 w-[90%] mx-auto items-center border border-gray-300 rounded-lg p-8 gap-16 lg:gap-2">
+        <div class="mt-10 grid grid-cols-1 lg:grid-cols-2  mx-auto items-center border border-gray-300 rounded-lg p-8 gap-16 lg:gap-2">
           <div>
               <img src="Images/11.png" alt="" class="lg:w-[90%]">
           </div>
@@ -433,6 +433,131 @@
           </div>
         </div>
       </section>
+
+      <section class="w-[90%] mx-auto mt-16 mb-20">
+        <div class="border-y-2 border-dashed py-10">
+          <h1 class="text-2xl font-bold text-center">Get In Touch</h1>
+          <p class="w-2/4 text-sm mx-auto mt-4 text-center text-gray-600 ">
+            Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin. 
+          </p>
+        </div>
+        <div class="mt-10 grid grid-cols-1 lg:grid-cols-2 gap-12 lg:gap-0">
+          <div class="border border-gray-200 rounded-xl p-8 space-y-6  lg:w-5/6">
+              <div class="bg-[#f8fdf0] rounded-lg p-6 space-y-4">
+                <img src="Images/Group 1171275317.png" alt="">
+                <p>Phone Number :</p>
+                <h3>(+62) 123-321-543</h3>
+              </div>
+              <div class="bg-[#fffcef] rounded-lg p-6 space-y-4">
+                <img src="Images/Group 1171275318.png" alt="">
+                <p>Email : </p>
+                <h3>hockeys@support.com</h3>
+              </div>
+              <div class="bg-[#eff5fe] rounded-lg p-6 space-y-4">
+                <img src="Images/Group 1171275321.png" alt="">
+                <p>Location : </p>
+                <h3>152/1 Mohakhali Wireless Gate</h3>
+              </div>
+          </div>
+          <div>
+            <form action="" class="grid gap-4 grid-cols-1 lg:grid-cols-2 ">
+              <div class="space-y-3 col-span-2 lg:col-span-1">
+                <label for="" class="font-bold text-lg">Your Name</label> <br>
+                <input type="text" name="" id="" placeholder="Enter your full name" 
+                class="w-full bg-[#13131808] p-4 rounded-lg">
+              </div> 
+              <div class="space-y-3 col-span-2 lg:col-span-1">
+                <label for="" class="font-bold text-lg">Your Email</label> <br>
+                <input type="email" name="" id="" placeholder="Enter your email" 
+                class="w-full bg-[#13131808] p-4 rounded-lg"> 
+              </div>
+              
+              <div class="space-y-3 mt-4 col-span-2 lg:col-span-1">
+                <label for="" class="font-bold text-lg">Subject</label> <br>
+                <input type="text" name="" id="" placeholder="Enter your subject" 
+                class="w-full bg-[#13131808] p-4 rounded-lg">
+              </div>
+              <div class="space-y-3 mt-4 col-span-2 lg:col-span-1">
+                <label for="" class="font-bold text-lg">Phone Number</label> <br>
+                <input type="text" name="" id="" placeholder="Enter your phone number" 
+                class="w-full bg-[#13131808] p-4 rounded-lg">
+              </div>
+              <div class="col-span-2 space-y-3 mt-4">
+                <label for="" class="font-bold text-lg">Message</label> <br>
+                <textarea name="" id="" cols="30" rows="10" placeholder="Write your message"
+                class="w-full bg-[#13131808] p-4 rounded-lg"></textarea>
+              </div>
+              <input type="submit" value="Send Message" 
+              class=" col-span-2 bg-[#FF4240] px-4 py-5 font-bold cursor-pointer rounded-lg text-white">
+            </form>
+          </div>
+        </div>
+      </section>
+
+      <section class="w-[90%] mx-auto bg-[#13131808] rounded-lg mt-10 py-14">
+        <h1 class="text-2xl font-extrabold text-center mb-6">Social Media</h1>
+        <div class="mx-auto text-lg flex items-center justify-center gap-6 font-bold">
+          <i class="fa-brands fa-twitter"></i>
+          <i class="fa-brands fa-facebook-f"></i>
+          <i class="fa-brands fa-instagram"></i>
+          <i class="fa-brands fa-github"></i>
+        </div>
+      </section>
     </main>
+
+    <footer class="footer bg-[#131318] text-white mt-10 p-10 py-16">
+      <aside>
+        <svg
+          width="50"
+          height="50"
+          viewBox="0 0 24 24"
+          xmlns="http://www.w3.org/2000/svg"
+          fill-rule="evenodd"
+          clip-rule="evenodd"
+          class="fill-current">
+          <path
+            d="M22.672 15.226l-2.432.811.841 2.515c.33 1.019-.209 2.127-1.23 2.456-1.15.325-2.148-.321-2.463-1.226l-.84-2.518-5.013 1.677.84 2.517c.391 1.203-.434 2.542-1.831 2.542-.88 0-1.601-.564-1.86-1.314l-.842-2.516-2.431.809c-1.135.328-2.145-.317-2.463-1.229-.329-1.018.211-2.127 1.231-2.456l2.432-.809-1.621-4.823-2.432.808c-1.355.384-2.558-.59-2.558-1.839 0-.817.509-1.582 1.327-1.846l2.433-.809-.842-2.515c-.33-1.02.211-2.129 1.232-2.458 1.02-.329 2.13.209 2.461 1.229l.842 2.515 5.011-1.677-.839-2.517c-.403-1.238.484-2.553 1.843-2.553.819 0 1.585.509 1.85 1.326l.841 2.517 2.431-.81c1.02-.33 2.131.211 2.461 1.229.332 1.018-.21 2.126-1.23 2.456l-2.433.809 1.622 4.823 2.433-.809c1.242-.401 2.557.484 2.557 1.838 0 .819-.51 1.583-1.328 1.847m-8.992-6.428l-5.01 1.675 1.619 4.828 5.011-1.674-1.62-4.829z"></path>
+        </svg>
+        <p>
+          ACME Industries Ltd.
+          <br />
+          Providing reliable tech since 1992
+        </p>
+      </aside>
+      <nav>
+        <h6 class="footer-title">Services</h6>
+        <a class="link link-hover">Branding</a>
+        <a class="link link-hover">Design</a>
+        <a class="link link-hover">Marketing</a>
+        <a class="link link-hover">Advertisement</a>
+      </nav>
+      <nav>
+        <h6 class="footer-title">Company</h6>
+        <a class="link link-hover">About us</a>
+        <a class="link link-hover">Contact</a>
+        <a class="link link-hover">Jobs</a>
+        <a class="link link-hover">Press kit</a>
+      </nav>
+      <nav>
+        <h6 class="footer-title">Legal</h6>
+        <a class="link link-hover">Terms of use</a>
+        <a class="link link-hover">Privacy policy</a>
+        <a class="link link-hover">Cookie policy</a>
+      </nav>
+    </footer>
+
+    <script>
+      document.querySelectorAll(".carousel a").forEach((link) => {
+        link.addEventListener("click", function (event) {
+          event.preventDefault();
+          document.querySelector(this.getAttribute("href")).scrollIntoView({
+            behavior: "smooth",
+            block: "nearest",
+            inline: "start",
+          });
+        });
+      });
+    </script>
+
 </body>
 </html>
